--- a/lab1/styleC.css
+++ b/lab1/styleC.css
@@ -1,10 +1,12 @@
 .container {
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: space-evenly;
   align-items: center;
   font-family: Tahoma;
   font-size: 40px;
+  min-height: 100vh;
+
 }
 
 .container div {
