--- a/styles/main.css
+++ b/styles/main.css
@@ -10,6 +10,6 @@ cs142-main- here.
 }
 
 .cs142-main-grid-item {
-  height: calc(100vh - 85px);
+  /* height: calc(100vh - 85px); */
   padding: 10px;
 }
